[tool.poetry]
name = "reblob"
version = "0.1.0"
description = "Tool for doing a reblog/reply/whatever of an existing webpage"
authors = ["fluffy <fluffy@beesbuzz.biz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
mf2py = "^2.0.1"
pypandoc = "^1.13"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.5"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
