[tool.poetry]
name = "reblob"
version = "0.1.0"
description = "Tool for doing a reblog/reply/whatever of an existing webpage"
authors = ["fluffy <fluffy@beesbuzz.biz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
mf2py = "^2.0.1"
html-to-markdown = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.5"
autopep8 = "^2.3.1"
mypy = "^1.16.1"
types-requests = "^2.32.4.20250611"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
reblob = 'reblob.cli:main'
